force-app/main/default/objects/CustomerDiscount__c/CustomerDiscount__c.object-meta.xml
<CustomObject>
    <label>Desconto por Cliente</label>
    <nameField>
        <label>Descontos por Cliente Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Descontos por Cliente</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>