force-app/main/default/objects/CustomerDiscount__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Família de Produto</label>
    <referenceTo>Family__c</referenceTo>
    <relationshipLabel>Descontos por Cliente</relationshipLabel>
    <relationshipName>Descontos_por_Cliente</relationshipName>
    <type>Lookup</type>
</CustomField>